--- a/inicial.css
+++ b/inicial.css
@@ -5,8 +5,11 @@ body{
 
 .f1{
     font-family: Arial, Helvetica, sans-serif;
-    margin-left: 780px;
+    font-size: 15px;
+}
 
+h2{
+    text-align: center;
 }
 
 .f2{
@@ -134,7 +137,7 @@ footer{
 }
 
 .tdescricao{
-    margin-top: 60px;
+    margin-top: 0px;
     margin-right: 500px;
 }
 
@@ -148,13 +151,18 @@ footer{
     font-weight: bold;
     color: #D9A13B;
     font-family: Arial, Helvetica, sans-serif;
+    margin-right: auto;
     margin-left: 150px;
+    margin-bottom: 0;
     font-size: 40px;
+    margin-top: 0;
 }
 
 .desc{
-    margin-left: 170px;
-    margin-bottom: 10px;
+    margin-right: auto;
+    margin-left: 180px;
+    margin-bottom: 30px;
+    margin-top: 0;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     text-decoration: line-through;
@@ -169,6 +177,10 @@ footer{
 
 .inicio:hover{
     box-shadow: 0 0 10px 0px #97722d;
+}
+
+.sonhoimg{
+    margin-left: 120px;
 }
 
 @media (max-width: 1200px) {
@@ -226,7 +238,7 @@ footer{
     }
 
     .tdescricao {
-        margin-top: 30px;
+        margin-top: 10px;
     }
 }
 
