--- a/produto1.css
+++ b/produto1.css
@@ -72,19 +72,23 @@ footer{
 }
 
 .preco{
+    display: flex;
+    justify-content: center;
     font-style: italic;
     font-weight: bold;
     color: #D9A13B;
     font-family: Arial, Helvetica, sans-serif;
     margin-right: auto;
-    margin-left: 140px;
+    margin-left: auto;
     margin-bottom: 0;
     font-size: 40px;
 }
 
 .desc{
+    display: flex;
+    justify-content: center;
     margin-top: 0;
-    margin-left: 160px;
+    margin-left: auto;
     margin-right: auto;
     margin-bottom: 50px;
     font-family: Arial, Helvetica, sans-serif;
@@ -93,7 +97,11 @@ footer{
 }
 
 .inicio{
-    margin-left: 1600px;
+    display: flex;
+    justify-content: center;
+    margin-right: auto;
+    margin-left: auto;
+    transition: 0.5s;
     border-radius: 15px;
     font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
