--- a/inicial.css
+++ b/inicial.css
@@ -90,6 +90,11 @@ nav{
     border-radius: 25px;
   }
 
+  .produtosl1:hover, .produtosl2:hover, .produtosl3:hover, .produtosl4:hover, .produtosl5:hover, .produtosl6:hover,.produtosl7:hover, .produtosl8:hover, .produtosl9:hover, .produtosl10:hover, .produtosl11:hover, .produtosl12:hover, .produtosl13:hover, .produtosl14:hover, .produtosl15:hover, .produtosl16:hover, .produtosl17:hover, .produtosl18:hover, .produtosl19:hover, .produtosl20:hover, .produtosl21:hover, .produtosl22:hover, .produtosl23:hover, .produtosl24:hover, .produtosl25:hover, .produtosl26:hover, .produtosl27:hover, .produtosl28:hover, .produtosl29:hover, .produtosl30:hover{
+    box-shadow: 0px 0px 10px 0px #e7b75d;
+    border-radius: 25px;
+    }
+
 .prod{
     height: 300px;
     border-radius: 25px;
@@ -124,7 +129,7 @@ nav{
     justify-content: space-around;
 }
 
-.produtos, .produtosl2, .produtosl3, .produtosl4, .produtosl5, .produtosl6, .produtosl7, .produtosl8, .produtosl9, .produtosl10 {
+.produtosl11, .produtosl12, .produtosl13, .produtosl14, .produtosl15, .produtosl16, .produtosl17, .produtosl18, .produtosl19, .produtosl20, .produtos, .produtosl2, .produtosl3, .produtosl4, .produtosl5, .produtosl6, .produtosl7, .produtosl8, .produtosl9, .produtosl10, .produtosl21, .produtosl22, .produtosl23, .produtosl24, .produtosl25, .produtosl26, .produtosl27, .produtosl28, .produtosl29, .produtosl30 {
     display: flex;
     justify-content: space-around;
     margin: 20px 0;
