--- a/produto1.css
+++ b/produto1.css
@@ -218,15 +218,18 @@ a{
 }
 
 .slider li:nth-child(1) label {
-    left: 30px;
+    margin-bottom: -40px;
+    left: 50px;
 }
 
 .slider li:nth-child(2) label {
-    left: 190px;
+    margin-bottom: -40px;
+    left: 100px;
 }
 
 .slider li:nth-child(3) label {
-    left: 350px;
+    margin-bottom: -40px;
+    left: 150px;
 }
 
 .slider img {
