--- a/produto1.css
+++ b/produto1.css
@@ -179,71 +179,78 @@ a{
 
 * { margin: 0; padding: 0; }
 
-.slider {
-    display: block;
-    height: 150px;
-
-    margin: auto;
-    margin-top: 20px;
+.slider-container {
     position: relative;
+    max-width: 600px;
+    margin: auto;
 }
 
-.slider li {
-    list-style: none;
-    position: absolute;
-}
+.slides {
 
-.slider img {
-    border-radius: 15px;
-    margin-left: 20px;
-    height: 90%;
-    width: 90%;
-    vertical-align: top;
-}
-
-.slider input {
     display: none;
 }
 
-.slider label {
-    margin-top: 100px;
-    background-color: #ffffff;
-    bottom: 10px;
+.prev, .next {
     cursor: pointer;
-    display: block;
-    height: 10px;
     position: absolute;
-    width: 10px;
-    z-index: 10;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
 }
 
-.slider li:nth-child(1) label {
-
-    left: 50px;
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
 }
 
-.slider li:nth-child(2) label {
-
-    left: 100px;
+.prev {
+    left: 0;
 }
 
-.slider li:nth-child(3) label {
-    left: 150px;
+.dot-container {
+    margin-top: 0;
+    margin-bottom: 10px;
+    border-radius: 15px;
+    text-align: center;
+    padding: 20px;
+    background: #ddd;
 }
 
-.slider img {
-    opacity: 0;
-    visibility: hidden;
+.dot {
+    
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
 }
 
-.slider li input:checked ~ img {
-    opacity: 1;
-    visibility: visible;
-    z-index: 10;
+.active, .dot:hover {
+    background-color: #717171;
 }
 
-.info{
-    margin-top: 250px;
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+.imgp{
+    margin-top: 15px;
+    border-radius: 15px;
+}
+
+@keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
 }
 
 @media (max-width: 1200px) {
