--- a/inicial.css
+++ b/inicial.css
@@ -24,20 +24,26 @@ h2{
 }
 
 .banner img{
+    margin-top: 60px;
     width: 100%;
     height: auto;
 }
 
 header{
+    position: fixed;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 60px;
-    background-color: #D9A13B;
+    align-items: start;
+    width: 430px;
+    background: #D9A13B;
 }
 
 nav{
     color: #97722d;
+}
+
+.logo{
+    align-items: center;
+    justify-content: center;
 }
 
 .produtos:hover {
