--- a/produto1.css
+++ b/produto1.css
@@ -5,6 +5,7 @@ body{
 
 header{
     display: flex;
+    justify-content: center;
     align-items: center;
     height: 60px;
     background-color: #D9A13B;
@@ -127,7 +128,7 @@ footer{
     color: white;
     height: 65px;
     width: 365px;
-    padding-bottom: 30px;
+    margin-bottom: 40px;
     margin-top: 25px;
     border: none;
     border-radius: 10px;
@@ -177,11 +178,38 @@ a{
     margin-left: 23px;
 }
 
+.sul, .sudeste, .norte, .nordeste, .centro, .interior{
+    display: flex;
+    justify-content: center;
+}
+
+.frete{
+    border-radius: 40px;
+    height: 500px;
+    padding-top: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #ddd ;
+    margin-bottom: 100px;
+}
+
+.freet{
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.precofrete{
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 30px;
+    margin-top: 30px;
+}
+
 * { margin: 0; padding: 0; }
 
 .slider-container {
     position: relative;
-    max-width: 600px;
+    max-width: 400px;
     margin: auto;
 }
 
@@ -199,7 +227,7 @@ a{
     color: white;
     font-weight: bold;
     font-size: 18px;
-    transition: 0.6s ease;
+    transition: 0.5s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
 }
@@ -215,18 +243,17 @@ a{
 
 .dot-container {
     margin-top: 0;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     border-radius: 15px;
     text-align: center;
-    padding: 20px;
+    padding: 10px;
     background: #ddd;
 }
 
-.dot {
-    
+.dot {  
     cursor: pointer;
-    height: 15px;
-    width: 15px;
+    height: 10px;
+    width: 10px;
     margin: 0 2px;
     background-color: #bbb;
     border-radius: 50%;
@@ -244,9 +271,19 @@ a{
 }
 
 .imgp{
-    margin-top: 15px;
+    margin-top: 30px;
     border-radius: 15px;
 }
+
+.freti{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.carrofrete{
+}
+
 
 @keyframes fade {
     from {opacity: .4}
